--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     />
     <title>Weather App</title>
   </head>
+
   <body>
     <div class="container">
-      <h1>Hello World</h1>
+      <h1>ALELUYA</h1>
       <a href="" class="btn btn-primary"></a>
       <script src="src/app.js"></script>
     </div>
