--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   <body>
     <div class="container">
-      <h1>ALELUYA</h1>
-      <a href="" class="btn btn-primary"></a>
+      <h1>PROBANDO</h1>
+
       <script src="src/app.js"></script>
     </div>
   </body>
