--- a/index.html
+++ b/index.html
@@ -16,9 +16,36 @@
 
   <body>
     <div class="container">
-      <h1>PROBANDO</h1>
+      <div class="weatherborder">
+        <h1>lets see the weather</h1>
 
-      <script src="src/app.js"></script>
+        <ul>
+          <li>Amsterdam 15 degrees</li>
+          <li>Saturday 18:53</li>
+        </ul>
+
+        <div class="row">
+          <div class="col-6">
+            <img src="https://c.tadst.com/gfx/w/svg/wt-18.svg" alt="Clear" />
+            Oh no Its raining!
+          </div>
+
+          <div class="col-6">
+            <ul>
+              <li>Chance of rain</li>
+              <li>trying</li>
+              <li>humidity</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
+    <small>
+      <a href="https://github.com/Vannecj4/Weather-App" target="_blank"
+        >Open-source code</a
+      >
+      by Vanne Cerdas
+    </small>
+    <script src="src/app.js"></script>
   </body>
 </html>
