css first part added

--- a/index.html
+++ b/index.html
@@ -17,35 +17,40 @@
   <body>
     <div class="container">
       <div class="weatherborder">
-        <h1>lets see the weather</h1>
+        <h1>Oh no!! Raining take your raincoat! 😭</h1>
 
         <ul>
-          <li>Amsterdam 15 degrees</li>
+          <li>Amsterdam Rain Showers</li>
           <li>Saturday 18:53</li>
         </ul>
 
         <div class="row">
-          <div class="col-6">
-            <img src="https://c.tadst.com/gfx/w/svg/wt-18.svg" alt="Clear" />
-            Oh no Its raining!
-          </div>
-
-          <div class="col-6">
+          <div class="col-4">
             <ul>
-              <li>Chance of rain</li>
-              <li>trying</li>
-              <li>humidity</li>
+              <li>65% chance of rain</li>
+              <li>Real Feel 10 C</li>
+            </ul>
+          </div>
+          <div class="col-4">
+            <img src="https://c.tadst.com/gfx/w/svg/wt-18.svg" alt="Clear" />
+            15C
+          </div>
+          <div class="col-4">
+            <ul>
+              <li>Partly Cloudy</li>
+              <li>Humidity</li>
             </ul>
           </div>
         </div>
+
+        <small>
+          <a href="https://github.com/Vannecj4/Weather-App" target="_blank"
+            >Open-source code</a
+          >
+          by Vanne Cerdas
+        </small>
       </div>
     </div>
-    <small>
-      <a href="https://github.com/Vannecj4/Weather-App" target="_blank"
-        >Open-source code</a
-      >
-      by Vanne Cerdas
-    </small>
     <script src="src/app.js"></script>
   </body>
 </html>
