CSS modifications added

--- a/index.html
+++ b/index.html
@@ -11,30 +11,39 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+
     <title>Weather App</title>
   </head>
 
   <body>
     <div class="container">
       <div class="weatherborder">
-        <h1>Oh no!! Raining take your raincoat! 😭</h1>
+        <h1>
+          Oh no!!
+          <b />
+          Take your raincoat!
+        </h1>
 
-        <ul>
-          <li>Amsterdam Rain Showers</li>
-          <li>Saturday 18:53</li>
+        <ul class="main">
+          Amsterdam Rain
+          <br />
+          Showers Saturday - 18:53
         </ul>
+
+        <hr />
 
         <div class="row">
           <div class="col-4">
             <ul>
-              <li>65% chance of rain</li>
-              <li>Real Feel 10 C</li>
+              <li>Change of rain: 65%</li>
+              <li>Real Feel 10°C</li>
             </ul>
           </div>
           <div class="col-4">
             <img src="https://c.tadst.com/gfx/w/svg/wt-18.svg" alt="Clear" />
-            15C
+            15°C
           </div>
+
           <div class="col-4">
             <ul>
               <li>Partly Cloudy</li>
