city font updated

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           Take your raincoat!
         </h1>
 
-        <ul class="main">
-          Amsterdam Rain
+        <p class="main">
+          <span class="city"> Amsterdam </span>
           <br />
-          Showers Saturday - 18:53
-        </ul>
+          Saturday - 18:53
+        </p>
 
         <hr />
 
@@ -46,8 +46,8 @@
 
           <div class="col-4">
             <ul>
-              <li>Partly Cloudy</li>
-              <li>Humidity</li>
+              <li>Raining</li>
+              <li>Humidity 90%</li>
             </ul>
           </div>
         </div>
