added week days

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="row">
           <div class="col-4">
             <ul>
-              <li>Change of rain: 65%</li>
+              <li>Raining</li>
               <li>Real Feel 10°C</li>
             </ul>
           </div>
@@ -46,8 +46,36 @@
 
           <div class="col-4">
             <ul>
-              <li>Raining</li>
+              <li>Chance of rain: 65%</li>
               <li>Humidity 90%</li>
+            </ul>
+          </div>
+        </div>
+
+        <hr />
+
+        <div class="row">
+          <div class="col-3">
+            <ul>
+              <li>Sunday</li>
+              <img src="https://c.tadst.com/gfx/w/svg/wt-33.svg" alt="day4" />
+            </ul>
+          </div>
+          <div class="col-3">
+            <li>Monday</li>
+            <img src="https://c.tadst.com/gfx/w/svg/wt-33.svg" alt="day4" />
+          </div>
+
+          <div class="col-3">
+            <ul>
+              <li>Tuesday</li>
+              <img src="https://c.tadst.com/gfx/w//svg/wt-1.svg" alt="day4" />
+            </ul>
+          </div>
+          <div class="col-3">
+            <ul>
+              <li>Wednesday</li>
+              <img src="https://c.tadst.com/gfx/w//svg/wt-1.svg" alt="day4" />
             </ul>
           </div>
         </div>
