--- a/index.html
+++ b/index.html
@@ -56,26 +56,44 @@
 
         <div class="row">
           <div class="col-3">
-            <ul>
-              <li>Sunday</li>
-              <img src="https://c.tadst.com/gfx/w/svg/wt-33.svg" alt="day4" />
-            </ul>
+            <div class="day1">
+              <ul>
+                <li>Sunday</li>
+                <img
+                  src="https://c.tadst.com/gfx/w/svg/wt-33.svg"
+                  alt="day4"
+                  class="imageone"
+                />
+              </ul>
+            </div>
           </div>
           <div class="col-3">
             <li>Monday</li>
-            <img src="https://c.tadst.com/gfx/w/svg/wt-33.svg" alt="day4" />
+            <img
+              src="https://c.tadst.com/gfx/w/svg/wt-33.svg"
+              alt="day4"
+              class="imagetwo"
+            />
           </div>
 
           <div class="col-3">
             <ul>
               <li>Tuesday</li>
-              <img src="https://c.tadst.com/gfx/w//svg/wt-1.svg" alt="day4" />
+              <img
+                src="https://c.tadst.com/gfx/w//svg/wt-1.svg"
+                alt="day4"
+                class="imagetree"
+              />
             </ul>
           </div>
           <div class="col-3">
             <ul>
               <li>Wednesday</li>
-              <img src="https://c.tadst.com/gfx/w//svg/wt-1.svg" alt="day4" />
+              <img
+                src="https://c.tadst.com/gfx/w//svg/wt-1.svg"
+                alt="day4"
+                class="image4"
+              />
             </ul>
           </div>
         </div>
