--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
           <div class="col-4">
             <img src="https://c.tadst.com/gfx/w/svg/wt-18.svg" alt="Clear" />
-            15°C
+            <span class="units"> 15°C /°F </span>
           </div>
 
           <div class="col-4">
@@ -58,12 +58,14 @@
           <div class="col-3">
             <div class="day1">
               <ul>
-                <li>Sunday</li>
-                <img
-                  src="https://c.tadst.com/gfx/w/svg/wt-33.svg"
-                  alt="day4"
-                  class="imageone"
-                />
+                <li>
+                  Sunday
+                  <img
+                    src="https://c.tadst.com/gfx/w/svg/wt-33.svg"
+                    alt="day4"
+                    class="imageone"
+                  />
+                </li>
               </ul>
             </div>
           </div>
