Temperature and image sized changed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
             </ul>
           </div>
           <div class="col-4">
-            <img src="https://c.tadst.com/gfx/w/svg/wt-18.svg" alt="Clear" />
+            <img
+              src="https://c.tadst.com/gfx/w/svg/wt-18.svg"
+              alt="Clear"
+              class="mainimage"
+            />
             <span class="units"> 15°C /°F </span>
           </div>
 
