changed unit color

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
               alt="Clear"
               class="mainimage"
             />
-            <span class="units"> 15°C /°F </span>
+            <span class="units"> 15 </span>
+            <span class="grados">°C | °F </span>
           </div>
 
           <div class="col-4">
