html - css - js last changed

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
         <p class="main">
           <span class="city"> Amsterdam </span>
+
           <br />
-          Saturday - 18:53
+          <span class="day"> Saturday - 18:53 </span>
         </p>
 
         <hr />
@@ -47,7 +48,7 @@
               alt="Clear"
               class="mainimage"
             />
-            <span class="units"> 15 </span>
+            <span id="units"> 15 </span>
             <span class="grados">°C | °F </span>
           </div>
 
