--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
   <body>
     <div class="container">
       <div class="weatherborder">
-        <h1>
-          Oh no!!
-          <b />
-          Take your raincoat!
-        </h1>
+        <div class="row">
+          <div class="col-9">
+            <form id="search form"></form>
+            <input
+              type="search"
+              placeholder="type the city"
+              class="form-control"
+            />
+          </div class="col-3">
+          <input type="submit" value="Search" class="btn btn-primary" />
+        </div>
 
         <p class="main">
           <span class="city"> Amsterdam </span>
