--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
 <body>
   <div class="container">
     <div class="weatherborder">
+
+     
       <div class="row">
         <div class="col-9">
           <form id="search-form"></form>
           <input type="search" placeholder="type the city" class="form-control" id="cityname" />
         </div class="col-3">
         <input type="submit" value="Search" class="btn btn-primary" />
+       </form>
       </div>
+      
+
+
 
       <p class="main">
         <span class="city"> Amsterdam </span>
