--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      
       <div class="row">
         <div class="col-9">
-          <form id="search-form"></form>
+          <form id="search-form">
           <input type="search" placeholder="type the city" class="form-control" id="cityname" />
         </div class="col-3">
         <input type="submit" value="Search" class="btn btn-primary" />
