--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="col-4">
           <img src="https://c.tadst.com/gfx/w/svg/wt-18.svg" alt="Clear" class="mainimage" />
-          <span id="units"> 15 </span>
+          <span id="units">  </span>
           <span class="grados">°C | °F </span>
         </div>
 
