humidity JS added

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <div class="row">
         <div class="col-4">
           <ul>
-            <li>Raining</li>
-            <li>Real Feel 10°C</li>
+            <li> <span id="weatherstate"></span> </li>
+            <li id="realfeel">Real Feel: </li>
           </ul>
         </div>
         <div class="col-4">
@@ -55,8 +55,8 @@
 
         <div class="col-4">
           <ul>
-            <li>Chance of rain: 65%</li>
-            <li>Humidity 90%</li>
+            <li>Chance of rain: <span id="chance"></span></li>
+            <li >Humidity: <span id="humidity"> </span>  </li>
           </ul>
         </div>
       </div>
