real feel added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="col-4">
           <ul>
             <li> <span id="weatherstate"></span> </li>
-            <li id="realfeel">Real Feel: </li>
+            <li> Real Feel: <span id="realfeel"></span> </li>
           </ul>
         </div>
         <div class="col-4">
@@ -56,7 +56,7 @@
         <div class="col-4">
           <ul>
             <li>Chance of rain: <span id="chance"></span></li>
-            <li >Humidity: <span id="humidity"> </span>  </li>
+            <li >Humidity: <span id="humidity"> </span> % </li>
           </ul>
         </div>
       </div>
