--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="col-4">
           <ul>
-            <li>Chance of rain: <span id="chance"></span></li>
+            <li> Wind: <span id="wind"></span>km/h</li>
             <li >Humidity: <span id="humidity"> </span> % </li>
           </ul>
         </div>
