city name updated

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
       <p class="main">
-        <span class="city"> Amsterdam </span>
+        <span id="city"> Amsterdam </span>
 
         <br />
         <span class="day"> Saturday - 18:53 </span>
@@ -44,19 +44,19 @@
         <div class="col-4">
           <ul>
             <li> <span id="weatherstate"></span> </li>
-            <li> Real Feel: <span id="realfeel"></span> </li>
+            <li> Real Feel: <span id="realfeel"></span> °C </li>
           </ul>
         </div>
         <div class="col-4">
           <img src="https://c.tadst.com/gfx/w/svg/wt-18.svg" alt="Clear" class="mainimage" />
           <span id="units">  </span>
-          <span class="grados">°C | °F </span>
+          <span class="grados">°C  </span>
         </div>
 
         <div class="col-4">
           <ul>
             <li> Wind: <span id="wind"></span>km/h</li>
-            <li >Humidity: <span id="humidity"> </span> % </li>
+            <li >Humidity: <span id="humidity"> </span>%</li>
           </ul>
         </div>
       </div>
