date and time added

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 
 
       <p class="main">
-        <span id="city"> Amsterdam </span>
+        <span id="city">  </span>
 
         <br />
-        <span class="day"> Saturday - 18:53 </span>
+        <li>Updated at: <span id="day"></span></li>
+       
       </p>
 
       <hr />
