Main Icon added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </ul>
         </div>
         <div class="col-4">
-          <img src="https://c.tadst.com/gfx/w/svg/wt-18.svg" alt="Clear" class="mainimage" />
+          <img src="https://c.tadst.com/gfx/w/svg/wt-18.svg" alt="Clear" class="mainimage" id="mainicon" />
           <span id="units">  </span>
           <span class="grados">°C  </span>
         </div>
