change city title

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
       <p class="main">
-        <span id="city">  </span>
+        <span id="city"> Let's see the weather! </span>
 
         <br />
         <li>Updated at: <span id="day"></span></li>
