Forecast and JS updated

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -65,25 +65,7 @@
       <hr />
 
       <div class="row" id="forecast">
-        <div class="col-3">
-          <div class="day1">
-            Sunday 15°C
-            <img src="https://c.tadst.com/gfx/w/svg/wt-33.svg" alt="day4" class="imageone" />
-          </div>
-        </div>
-        <div class="col-3">
-          Monday 12°C
-          <img src="https://c.tadst.com/gfx/w/svg/wt-33.svg" alt="day4" class="imagetwo" />
-        </div>
-
-        <div class="col-3">
-          Tuesday 11°C
-          <img src="https://c.tadst.com/gfx/w//svg/wt-1.svg" alt="day4" class="imagetree" />
-        </div>
-        <div class="col-3">
-          Wednesday 10°C
-          <img src="https://c.tadst.com/gfx/w//svg/wt-1.svg" alt="day4" class="image4" />
-        </div>
+        
       </div>
 
       
